<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ListItemsActivity"
    android:rowCount="2">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/RadioButton"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

    <Switch
        android:id="@+id/ActivitySwitchID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:onClick="setOnCheckedChanged"
        android:text="@string/Confusion" />

    <ImageButton
        android:id="@+id/CameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:onClick="ClickCameraButton"
        android:src="@android:drawable/ic_menu_camera" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="104dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:onClick="onCheckChanged"
        android:text="@string/CheckBox" />
</GridLayout>